testsuite/tests/partial-sigs/should_fail/WildcardInInstanceSig.hs
{-# LANGUAGE InstanceSigs #-}
module WildcardInInstanceSig where

instance Num Bool where negate :: _
