testsuite/tests/partial-sigs/should_fail/WildcardInInstanceSig.stderr

WildcardInInstanceSig.hs:5:13: error:
    Unexpected wild card: ‘_’
    In the type signature for ‘negate’: negate :: _
    In the instance declaration for ‘Num Bool’
